...
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yr6-BL-vPk">
                                <rect key="frame" x="47.5" y="289" width="280" height="40"/>
                                <fontDescription key="fontDescription" name="HankenSans-Medium" family="Hanken Sans" pointSize="30"/>
                                <state key="normal" title="Select preferred class">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="selectClassTapped:" destination="q4r-e1-fkn" eventType="touchUpInside" id="1Hz-zK-RF3"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Utf-1m-1kH">
                                <rect key="frame" x="94" y="161" width="187.5" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="PnV-cX-jSn"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HankenSans-Medium" family="Hanken Sans" pointSize="30"/>
                                <state key="normal" title="Select a date">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="selectDateTapped:" destination="q4r-e1-fkn" eventType="touchUpInside" id="vzA-Ly-q9V"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsj-RD-ggH">
                                <rect key="frame" x="94" y="225" width="187.5" height="40"/>
                                <fontDescription key="fontDescription" name="HankenSans-Medium" family="Hanken Sans" pointSize="30"/>
                                <state key="normal" title="Select time">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="chooseTimeTapped:" destination="q4r-e1-fkn" eventType="touchUpInside" id="qA7-Ea-GPP"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="16" y="402" width="343" height="45"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="Vpb-Zk-rmO"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HankenSans-Bold" family="Hanken Sans" pointSize="23"/>
                                <state key="normal" title="Schedule">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="dividerColor">
                                        <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </userDefinedRuntimeAttribute>
...
                            </imageView>
                            <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ivi-fs-Aer">
                                <rect key="frame" x="37.5" y="208.5" width="300" height="250"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Transaction Was Processed Successfully" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Erh-hD
                                        <rect key="frame" x="0.0" y="135" width="300" height="46"/>
                                        <fontDescription key="fontDescription" name="HankenSans-Medium" family="Hanken Sans" pointSize="19"/>
                                        <color key="textColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qmo-Kf-iTd">
                                        <rect key="frame" x="8" y="201" width="284" height="35"/>
                                        <fontDescription key="fontDescription" name="HankenSans-Bold" family="Hanken Sans" pointSize="19"/>
...
