...
        
        let attributes: [NSAttributedString.Key: Any] = [.font: UIFont.systemFont(ofSize: 16), .foregroundColor: UIColor.blue]
        
        let doneToolBar: UIToolbar = .init(frame: CGRect(x: 0, y: 0, width: view.bounds.width, height: 50))
        doneToolBar.barStyle = .default
        
        let done = UIBarButtonItem(title: "Done", style: .done, target: target, action: selector)
        
        done.setTitleTextAttributes(attributes, for: .normal)
        done.setTitleTextAttributes(attributes, for: .highlighted)
        
        let flexSpace = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: self, action: nil)
        
...
