...

class CountryCode {
    
    var currentCode: String!
    var allCodes: [String]!
    
    let codeDictionaryShort = ["BD": "+880", "BE": "+32", "BF": "+226", "BG": "+359", "BA": "+387", "BB": "+1-246", "WF": "+681", "BL": "+590", "BM": "+1-441", "BN": "+673", "BO": "+591", "BH": "+973", "BI": "+257", "BJ": "+229", "BT": "+975", "JM": "+1-876", "BV": "", "BW": "+267", "WS": "+685", "BQ": "+599", "BR": "+55", "BS": "+1-242", "JE": "+44-1534", "BY": "+375", "BZ": "+501", "RU": "+7", "
    
    let codeDictionary = ["Belarus ":"+375", "Singapore ":"+65", "Tajikistan ":"+992", "Barbados ":"+1-246", "Eritrea ":"+291", "Isle of Man ":"+44-1624", "Lesotho ":"+266", "Indonesia ":"+62", "Palau ":"+680", "Saint Martin ":"+590", "Sint Maarten ":"+599", "Myanmar ":"+95", "Mozambique ":"+258", "Bosnia and Herzegovina ":"+387", "Brazil ":"+55", "Cameroon ":"+237", "East Timor ":"+670", "Madagas
    
    init() {
        currentCode = getCountryCode()
        allCodes = generateArrayOfCodes()
...
